<resources>
    <string name="app_name">TimeTableGenerator</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="submit">submit</string>
    <string name="upload_file">Upload File</string>
    <string name="upload_file_or_manually_enter">Upload File \n or \n Manually Enter Details</string>
    <string name="time_table">timetable</string>
    <string name="user_id">User Id</string>
    <string name="view_timetable">View TimeTable</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="course">Subject</string>
    <string name="register">Register</string>
    <string name="change">change</string>
    <string name="request_leave">Request Leave</string>
    <string name="leaves">leaves</string>
    <string name="create_time_table">Create Time Table</string>
    <string name="department_of">Department Of</string>
    <string name="department">Computer Science</string>
    <string name="department_name">Department Name</string>
    <string name="faculty_name">Faculty Name</string>
    <string name="available_faculty">Available Faculty:</string>
    <string name="generate_timetable">Generate TimeTable</string>
    <string name="submit_request">Submit Request</string>
    <string name="available_sections">Available Sections:</string>
    <string name="choose_date_of_leave">Choose Date of Leave</string>
    <string name="write_your_message">Write your message...</string>
    <string name="add_or_remove_sections">Add or Remove Sections</string>
    <string name="title_activity_faculty_leaves">FacultyLeavesActivity</string>

</resources>
