<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="5dp">

    <Button
        android:id="@+id/student_upload_file"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/login_view_height"
        android:background="@drawable/button_shape"
        android:drawableStart="@drawable/upload_file"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/upload_file"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textDirection="rtl" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/upload_file_or_manually_enter"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/student_id"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/login_view_height"
        android:hint="@string/user_id"
        android:inputType="textPersonName"
        android:backgroundTint="@color/edit_text_line" />

    <EditText
        android:id="@+id/student_password"
        android:layout_width="@dimen/edit_text_width"
        android:hint="@string/password"
        android:layout_height="@dimen/login_view_height"
        android:inputType="textVisiblePassword"
        android:text="@string/time_table"
        android:backgroundTint="@color/edit_text_line" />

    <Button
        android:layout_marginTop="@dimen/margin_top"
        android:id="@+id/register_student"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/login_view_height"
        android:background="@drawable/button_shape"
        android:text="Register" />

</LinearLayout>
