<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_background"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/department_of"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/display_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/department"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        style="@style/button_style"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/login_view_height"
        android:layout_marginTop="35dp"
        android:text="@string/leaves"
        android:onClick="acceptRejectLeaves"
        android:textAllCaps="false" />

    <Button
        style="@style/button_style"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/login_view_height"
        android:layout_marginTop="35dp"
        android:onClick="generateTimeTable"
        android:text="@string/generate_time_table"
        android:textAllCaps="false" />

    <Button
        style="@style/button_style"
        android:layout_width="@dimen/edit_text_width"
        android:layout_height="@dimen/login_view_height"
        android:layout_marginTop="35dp"
        android:text="@string/view_timetable"
        android:onClick="viewTimeTable"
        android:textAllCaps="false" />

</LinearLayout>


